# Uber_Ride_Prediction

./: ML model.ipynb  README.md  app.py  pyproject.toml
static/: style.css
